force-app/main/default/objects/Certificate_Tracking__c/Certificate_Tracking__c.object-meta.xml
<CustomObject>
    <label>Certificate Tracking</label>
    <nameField>
        <label>Certificate Tracking</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Certificate Tracking</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>