force-app/main/default/objects/Certificate_Tracking__c/fields/Cert_not_req__c.field-meta.xml
<CustomField>
    <fullName>Cert_not_req__c</fullName>
    <label>Cert# (not req)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>