force-app/main/default/objects/Certificate_Tracking__c/fields/cntDuplicateCertsPerTechPerIncident__c.field-meta.xml
<CustomField>
    <fullName>cntDuplicateCertsPerTechPerIncident__c</fullName>
    <label>cntDuplicateCertsPerTechPerIncident</label>
    <precision>14</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>