force-app/main/default/objects/Certificate_Tracking__c/fields/cntTechPerIncident__c.field-meta.xml
<CustomField>
    <fullName>cntTechPerIncident__c</fullName>
    <label>cntTechPerIncident</label>
    <precision>14</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>