force-app/main/default/objects/Certificate_Tracking__c/fields/Contact_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Contact_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Technician Lookup</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Certificate Tracking</relationshipLabel>
    <relationshipName>Certificate_Tracking</relationshipName>
    <type>Lookup</type>
</CustomField>