force-app/main/default/objects/Certificate_Tracking__c/fields/General_Contractor_Lookup__c.field-meta.xml
<CustomField>
    <fullName>General_Contractor_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>General Contractor Lookup</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Certificate Tracking</relationshipLabel>
    <relationshipName>Certificate_Tracking</relationshipName>
    <type>Lookup</type>
</CustomField>