force-app/main/default/objects/Certificate_Tracking__c/fields/In_house_Training__c.field-meta.xml
<CustomField>
    <fullName>In_house_Training__c</fullName>
    <defaultValue>false</defaultValue>
    <label>In-house Training</label>
    <type>Checkbox</type>
</CustomField>