force-app/main/default/objects/Certificate_Tracking__c/fields/Incident_Index__c.field-meta.xml
<CustomField>
    <fullName>Incident_Index__c</fullName>
    <label>Incident Index</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>