force-app/main/default/objects/Certificate_Tracking__c/fields/Incident_Tracker_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Incident_Tracker_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Incident Tracker Lookup</label>
    <referenceTo>Incident_Tracker__c</referenceTo>
    <relationshipLabel>Certificate Tracking</relationshipLabel>
    <relationshipName>Certificate_Tracking</relationshipName>
    <type>Lookup</type>
</CustomField>