force-app/main/default/objects/Certificate_Tracking__c/fields/Instructor_Name_not_req__c.field-meta.xml
<CustomField>
    <fullName>Instructor_Name_not_req__c</fullName>
    <label>Instructor Name (not req)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>