force-app/main/default/objects/Certificate_Tracking__c/fields/Technician_Name__c.field-meta.xml
<CustomField>
    <fullName>Technician_Name__c</fullName>
    <label>Technician Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>