force-app/main/default/objects/Certificate_Tracking__c/fields/Training_Company__c.field-meta.xml
<CustomField>
    <fullName>Training_Company__c</fullName>
    <label>Training Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>