force-app/main/default/objects/Certificate_Tracking__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Authorized Climber</fullName>
            </value>
            <value>
                <fullName>Basic Rigger</fullName>
            </value>
            <value>
                <fullName>Competent Climber</fullName>
            </value>
            <value>
                <fullName>Competent Rigger</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Trainer - Competent Climber</fullName>
            </value>
            <value>
                <fullName>Trainer - Competent Rigger</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>