force-app/main/default/objects/Certificate_Tracking__c/fields/Validation__c.field-meta.xml
<CustomField>
    <fullName>Validation__c</fullName>
    <label>Validation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>